fix images not showing

--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ button {
 
 .image-illustration img{
     justify-content: space-around;
+    padding-top: 20px;
     height: 200px;
     width: 200px;
 
